--- a/modules_application/presentation/src/main/res/layout/item_album.xml
+++ b/modules_application/presentation/src/main/res/layout/item_album.xml
@@ -1,15 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_marginStart="@dimen/album_viewholder_margin"
+    android:layout_marginTop="@dimen/album_viewholder_margin"
+    android:layout_marginEnd="@dimen/album_viewholder_margin"
+    android:layout_marginBottom="@dimen/album_viewholder_margin"
+    app:cardCornerRadius="@dimen/album_viewholder_radius">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        tools:text="Mleko" />
+        android:layout_height="wrap_content">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/artworkImageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/image_album_placeholder" />
+
+        <TextView
+            android:id="@+id/albumNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/album_viewholder_name_marginStart"
+            android:layout_marginEnd="@dimen/album_viewholder_name_marginEnd"
+            android:textColor="@color/white"
+            android:textSize="@dimen/album_viewholder_name_textSize"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/artistNameTextView"
+            tools:text="Un Verano Sin Ti" />
+
+        <TextView
+            android:id="@+id/artistNameTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/album_viewholder_artistName_marginBottom"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/album_viewholder_artistName_textSize"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/albumNameTextView"
+            app:layout_constraintStart_toStartOf="@id/albumNameTextView"
+            tools:text="Bad bunny" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
