--- a/modules_application/presentation/src/main/res/values/colors.xml
+++ b/modules_application/presentation/src/main/res/values/colors.xml
@@ -8,5 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+
+    <color name="gray">#b5b5b5</color>
+
+
+
     <color name="transparent20">#33000000</color>
 </resources>
