--- a/modules_application/presentation/src/main/res/values/dimens.xml
+++ b/modules_application/presentation/src/main/res/values/dimens.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="progressbar_size">60dp</dimen>
+
+    <dimen name="album_viewholder_margin">6dp</dimen>
+    <dimen name="album_viewholder_radius">20dp</dimen>
+    <dimen name="album_viewholder_name_marginStart">12dp</dimen>
+    <dimen name="album_viewholder_name_marginEnd">13dp</dimen>
+    <dimen name="album_viewholder_name_textSize">16sp</dimen>
+
+    <dimen name="album_viewholder_artistName_marginBottom">12dp</dimen>
+    <dimen name="album_viewholder_artistName_textSize">12sp</dimen>
+
+
 </resources>
