Implement album details screen

--- a/modules_application/presentation/src/main/res/values/dimens.xml
+++ b/modules_application/presentation/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="screenEdge_padding">16dp</dimen>
 
     <dimen name="toolbar_expanded_title_textSize">34sp</dimen>
     <dimen name="toolbar_expanded_title_marginStart">16dp</dimen>
@@ -19,6 +20,9 @@
 
     <dimen name="album_viewholder_artistName_marginBottom">12dp</dimen>
     <dimen name="album_viewholder_artistName_textSize">12sp</dimen>
+
+
+
 
 
 </resources>
