--- a/modules_application/presentation/src/main/res/values/colors.xml
+++ b/modules_application/presentation/src/main/res/values/colors.xml
@@ -10,8 +10,11 @@
 
 
     <color name="gray">#b5b5b5</color>
+    <color name="manatee">#8e8e93</color>
 
+    <color name="blue">#007aff</color>
 
+    <color name="ebony">#111226</color>
 
     <color name="transparent20">#33000000</color>
     <color name="transparent100">#00000000</color>
