Unify textSizes in whole project
(cherry picked from commit d91d094332e9c651612c01f661a3f3789f508581)
(cherry picked from commit 31ecfcf8d84494e1d5eaab0e8ca5f9a4bfc4b2fe)
(cherry picked from commit 9863e4b43c4d75a9e67ff043e0f4afd5d48d1e17)
(cherry picked from commit 4be74b88b7dd21ed283b53e8f5ca467a1d701a93)
(cherry picked from commit 6b6629125636a1ec55eebd2e264f682e8fd2b00e)

--- a/modules_application/presentation/src/main/res/layout/fragment_album_details.xml
+++ b/modules_application/presentation/src/main/res/layout/fragment_album_details.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="@dimen/screenEdge_padding"
         android:textColor="@color/gray"
-        android:textSize="18sp"
+        android:textSize="@dimen/textSize_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/artworkImageView"
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/ebony"
-        android:textSize="34sp"
+        android:textSize="@dimen/textSize_huge"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/artistNameTextView"
         app:layout_constraintStart_toStartOf="@id/artistNameTextView"
@@ -49,7 +49,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/background_border_rounded_blue"
         android:textColor="@color/blue"
-        android:textSize="12sp"
+        android:textSize="@dimen/textSize_small"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/artistNameTextView"
         app:layout_constraintTop_toBottomOf="@id/albumNameTextView"
