--- a/modules_application/presentation/src/main/res/values/dimens.xml
+++ b/modules_application/presentation/src/main/res/values/dimens.xml
@@ -4,12 +4,11 @@
 
     <dimen name="textSize_small">12sp</dimen>
     <dimen name="textSize_normal">16sp</dimen>
+    <dimen name="textSize_large">18sp</dimen>
     <dimen name="textSize_huge">34sp</dimen>
 
-    <dimen name="toolbar_expanded_title_textSize">34sp</dimen>
     <dimen name="toolbar_expanded_title_marginStart">16dp</dimen>
     <dimen name="toolbar_expanded_height">65dp</dimen>
-    <dimen name="toolbar_collapsed_title_textSize">16sp</dimen>
     <dimen name="toolbar_collapsed_height">41dp</dimen>
 
     <dimen name="albumList_recyclerView_padding">10dp</dimen>
@@ -22,10 +21,7 @@
     <dimen name="album_viewholder_radius">20dp</dimen>
     <dimen name="album_viewholder_name_marginStart">12dp</dimen>
     <dimen name="album_viewholder_name_marginEnd">13dp</dimen>
-    <dimen name="album_viewholder_name_textSize">16sp</dimen>
 
     <dimen name="album_viewholder_artistName_marginBottom">12dp</dimen>
-    <dimen name="album_viewholder_artistName_textSize">12sp</dimen>
-
 
 </resources>
