--- a/modules_application/presentation/src/main/res/values/themes.xml
+++ b/modules_application/presentation/src/main/res/values/themes.xml
@@ -15,12 +15,12 @@
     </style>
 
     <style name="ExpandedTitleTextAppearance" parent="@android:style/TextAppearance">
-        <item name="android:textSize">34sp</item>
+        <item name="android:textSize">@dimen/textSize_huge</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CollapsedTitleTextAppearance" parent="@android:style/TextAppearance">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/textSize_normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
