--- a/modules_application/presentation/src/main/res/values/themes.xml
+++ b/modules_application/presentation/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
 
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
+
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="ExpandedTitleTextAppearance" parent="@android:style/TextAppearance">
