Replace LoadingLayout with SwipeRefreshLayout
(cherry picked from commit cee41d1515b57ecee09d276b3ed355f21e1e0bd4)

--- a/modules_application/presentation/src/main/res/layout/fragment_album_list.xml
+++ b/modules_application/presentation/src/main/res/layout/fragment_album_list.xml
@@ -31,22 +31,24 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingStart="@dimen/albumList_recyclerView_padding"
-        android:paddingTop="@dimen/albumList_recyclerView_padding"
-        android:paddingEnd="@dimen/albumList_recyclerView_padding"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:spanCount="2"
-        tools:listitem="@layout/item_album" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.example.vamatask.customviews.LoadingLayout
-        android:id="@+id/loadingLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingStart="@dimen/albumList_recyclerView_padding"
+            android:paddingTop="@dimen/albumList_recyclerView_padding"
+            android:paddingEnd="@dimen/albumList_recyclerView_padding"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            tools:listitem="@layout/item_album" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
