Implement back button on details screen
(cherry picked from commit 63bdc61440e02510bc107177d6968b95a4b09fbf)
(cherry picked from commit bce8a8f7a2c1068bfd57ae74ac0189a6de6b2ea3)

--- a/modules_application/presentation/src/main/res/layout/fragment_album_details.xml
+++ b/modules_application/presentation/src/main/res/layout/fragment_album_details.xml
@@ -16,6 +16,19 @@
         tools:ignore="ContentDescription"
         tools:src="@drawable/image_album_placeholder" />
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="@dimen/screenEdge_padding"
+        android:layout_marginTop="59dp"
+        android:background="@drawable/background_circle_halftransparent"
+        android:scaleType="center"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/artistNameTextView"
         android:layout_width="0dp"
