--- a/modules_application/presentation/src/main/res/layout/fragment_album_list.xml
+++ b/modules_application/presentation/src/main/res/layout/fragment_album_list.xml
@@ -25,6 +25,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/toolbar_collapsed_height"
+                android:paddingBottom="10dp"
                 app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
